2017-07-11  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170711
	  forgot to update after merge on 20170708 ;-)
	  o main.c: refactor to reduce size of main function.
	    add -v option to always fully expand values.
	  o meta.c: ensure command output in meta file has ending newline
	    even when filemon not being used.
	    When matching ${.MAKE.META.IGNORE_PATTERNS} do not use
	    pathname via ':L' since any ':' in pathname breaks that.
	    Instead set a '${.p.}' to pathname in the target context and
	    use that.

2017-05-10  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170510
	  Merge with NetBSD make, pick up
	  o main.c: Main_SetObjdir: ensure buf2 is in scope

2017-05-08  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170505
	  see mk/ChangeLog

2017-05-05  Simon J. Gerraty  <sjg@bad.crufty.net>

	* parse.c: not everyone has stdint.h

2017-05-01  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170501
	  see mk/ChangeLog

2017-04-21  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170421
	  Merge with NetBSD make, pick up
	  o str.c: Str_Match: fix closure tests for [^] and add unit-test.

2017-04-20  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170420
	  Merge with NetBSD make, pick up
	  o main.c: only use -C arg "as is" if it contains no 
	    relative component.

2017-04-18  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170418
	  Merge with NetBSD make, pick up
	  o main.c: fix Main_SetObjdir() for relative paths (eg obj).

2017-04-17  Simon J. Gerraty  <sjg@bad.crufty.net>

	* Makefile (_MAKE_VERSION): 20170417
	  Merge with NetBSD make, pick up
	  o fixes a number of coverity complaints
	    - check return value of fseek, fcntl
	    - plug memory leak in Dir_FindFile, Var_LoopExpand,
	      JobPrintCommand, ParseTraditionalInclude